--- a/src/cards/css/card.css
+++ b/src/cards/css/card.css
@@ -1,13 +1,17 @@
 button {
-  width: 100px;
-  height: 60px;
+  width: fit-content;
+  padding: 1rem;
+  /* height: 60px; */
   background-color: rgba(0, 0, 0, 0.55);
   border-radius: 10px;
   color: aliceblue;
+  /* border: 3px solid lime; */
 }
 
+/* 
 a {
   text-decoration: none;
   color: aliceblue;
   font-size: 15px;
-}
+  border: 2px solid salmon;
+} */
