--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -7,6 +12,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-image: url("./assets/media/wallpaper2.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
   color: aliceblue;
 }
 
